# Stitch

./: .gitignore  .gitmodules  LICENSE  README.md  build.gradle  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/soko/ekibun/stitch/: App.kt  BitmapCache.kt  CaptureService.kt  CenterSeekbar.kt  EditActivity.kt  EditAdapter.kt  EditDecorator.kt  EditLayoutManager.kt  EditView.kt  EmptyAdapter.kt  FloatButton.kt  MainActivity.kt  Notification.kt  ProjectListAdapter.kt  QuickTileService.kt  RangeSeekbar.kt  ScreenCapture.kt  SplashActivity.kt  StartCaptureActivity.kt  Stitch.kt
app/src/main/jni/: CMakeLists.txt  stitch.cpp
app/src/main/jni/opencv/: build.bat
app/src/main/res/drawable/: bg_fab.xml  bg_rect.xml  ic_arrow_forward.xml  ic_check_all.xml  ic_check_clear.xml  ic_chevron_left.xml  ic_delete.xml  ic_drop_down.xml  ic_image_add.xml  ic_launcher_foreground.xml  ic_save.xml  ic_share.xml  ic_tile.xml  ic_undo.xml
app/src/main/res/layout/: activity_edit.xml  activity_main.xml  float_button.xml  list_header.xml  list_project.xml
app/src/main/res/menu/: menu_stitch.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: colors.xml  themes.xml
app/src/main/res/values-v28/: themes.xml
app/src/main/res/values-zh/: strings.xml
app/src/main/res/values-zh-rTW/: strings.xml
app/src/main/res/xml/: fileprovider.xml
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt
fastlane/metadata/android/zh-CN/: full_description.txt  short_description.txt
gradle/wrapper/: gradle-wrapper.properties
